--- a/acceuil.html
+++ b/acceuil.html
@@ -32,6 +32,13 @@
 		<th>..................................</th>
 		<th>..................................</th>
 	</tr>
+
+	<form>
+		<div>
+			<label>nom:</label>
+			<input type="name" name="name">
+		</div>
+	</form>
 	
 </table>
 </body>
